[gd_scene load_steps=8 format=2]

[ext_resource path="res://nodes/UI/target_button.gd" type="Script" id=1]
[ext_resource path="res://resources/tres/fonts/sml_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/Magero.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://nodes/UI/bar.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.258824, 0.823529, 1 )
border_width_left = 5
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.509804, 0.835294, 0.870588, 1 )
corner_radius_top_right = 4
corner_radius_bottom_left = 8
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
border_width_top = 1
border_width_right = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1
anti_aliasing = false

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
use_mipmaps = true
extra_spacing_top = -2
font_data = ExtResource( 3 )

[node name="Target" type="Panel"]
margin_right = 80.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_left = 6.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
valign = 2
clip_text = true

[node name="Key" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.760784 )
margin_top = 13.0
margin_right = 12.0
margin_bottom = 24.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S1"
align = 1
valign = 1
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 13.0
margin_top = 15.0
margin_right = 77.0
margin_bottom = 21.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.309804 )

[node name="Bar" parent="." instance=ExtResource( 4 )]
margin_left = 14.0
margin_top = 16.0
margin_right = 76.0
margin_bottom = 20.0
color = Color( 0.94902, 0.745098, 0.0431373, 1 )

[node name="Button" type="Button" parent="."]
margin_right = 80.0
margin_bottom = 24.0
flat = true
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
